SecureServ Module for NeoStats Changelog.
==============================================================================
1.3 - Fish (F) and Mark (M) - 27 Aug, 2004
 - Fix bug 190 - wrong message displayed for chan message off. (M)
 - Fix bug 176 - monchans and excludes (M)
 - Ported to core command processor (M)
 - SET interface for nick/user/host/realname added (M)
 - Fix for bug 115, monchan bots now reinit if killed (M)
 - Add set option for onjoin bot modes so users can specify their own modes (M)
 - OnJoin bots will now leave channels when the last user leaves (M)
 - Add a KILL action for viri. Useful to keep the akill list manageable by not 
   adding bots that do not rejoin after kill (e.g. WebCamSpam) (M)
 - use Match rather than fnmatch to avoid case sensitivity problems with modules (F)

1.2 - Fish (F) and Mark (M) - 12 Feb, 2004
 - Fix up a monbot channel cycle crash (M)
 - Scan All channels names in the online function, so we can catch bad channels
   after we link (F)
 - CheckChan now also scans the channel name against the list (F)
 - We now try to read nick, user, host and realname so these can be configured more 
   easily (M)
 - Change the MonChanCycle so all channels are cycled at the same time (F)
 - CheckLockChan timer changed to 60 seconds from 10 to reduce load a little (M)
 - Fix finduser call with NULL when lastnick is NULL (M)
 - Fix finduser call with NULL when lastnick is NULL (M)

1.1 - Fish (F) and Mark (M) - 2 Dec, 2003
 - Fixed incorrect parameters to printf style functions (M)
 - Remove unused MODE_ defines. If needed they should be in the core anyway (M)
 - Made startup messages obey verbose setting (M)
 - Use more appropriate defines for buffer sizes since MAXHOST differs between IRCds (M)
 - Fix for bug 96 (multiple monbots) (M)
 - Fixed bug with helper kill messages (virus name and helper name were reversed) (M)
 - Replace channel join calls with more portable join_bot_to_chan function (M)